# run-crucible

./: .env.example  .gitignore  CODING_RULES.md  README.md  pyproject.toml  root_config.yaml
.github/workflows/: ci.yml
core/config/: __init__.py  loader.py  overrides.py
core/handlers/: __init__.py  logger.py
core/helpers/: monitor.py
core/jobs/: __init__.py  abstract.py  standalone.py  training.py
core/runtime/: __init__.py  context.py  discovery.py  execution.py
core/trackers/: __init__.py  abstract.py  wandb.py
core/utils/: __init__.py
crucible/: README.md
crucible/core/config/: __init__.py  loader.py  overrides.py
crucible/core/constants/: __init__.py
crucible/core/handlers/: __init__.py  logger.py
crucible/core/jobs/: __init__.py  abstract.py  standalone.py  training.py
crucible/core/mixins/: sgd.py
crucible/core/runtime/: __init__.py  discovery.py  execution.py
crucible/core/trackers/: __init__.py  abstract.py  wandb.py
crucible/interface/cli/: __init__.py  cli.py  utils.py
crucible/interface/cli/templates/: __init__.py.tpl  job_plain.py.tpl  job_trainer.py.tpl  runner_standalone.py.tpl  runner_training.py.tpl
crucible/tests/: test_config_merge.py  test_interface_cli_pipeline.py  test_job_lifecycle.py  test_jobs_root.py  test_runs_root.py  test_templates.py
docs/: README.md
interface/: __init__.py
interface/cli/: __init__.py  __main__.py  cli.py  utils.py
interface/cli/templates/: runner_standalone.py.tpl  runner_training.py.tpl
interface/web/: __init__.py  __main__.py  server.py
interface/web/frontend/: package-lock.json  package.json
interface/web/frontend/app/: layout.js  page.js
jobs/mlp/: __init__.py  job.py
jobs/mlp/configs/: default.yaml
jobs/simple_mlp_on_mnist/: job.py
jobs/simple_mlp_on_mnist/configs/: default.yaml
ml_research.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
my_runs/mlp/: runner.py
plugins/: __init__.py
plugins/ml/: __init__.py
plugins/ml/models/: mlp.py
plugins/ml/optimizers/: __init__.py  muon.py  sgd.py
plugins/ml/schedulers/: __init__.py
runs/: base_exp.py
tests/: test_interface_cli_pipeline.py  test_templates.py  test_uiapp_pipeline.py  test_web_server.py
tests/fixtures/templates/: broken_python.py.tpl  broken_yaml.yaml.tpl
uiapp/: cli.py  utils.py
uiapp/templates/: __init__.py.tpl
(+8 files in other folders)
