[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crucible"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "hydra-core>=1.3.2",
    "rich>=14.3.3",
    "torch>=2.10.0",
    "typer>=0.24.1",
    "wandb>=0.25.0",
]

[project.scripts]
crucible = "crucible.interface.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.3.0",
]

[tool.uv]
package = true

[tool.setuptools.packages.find]
include = ["crucible*", "core*", "interface*", "plugins*", "runs*"]

[tool.setuptools.package-data]
"interface.cli" = ["templates/*.tpl"]
