[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crucible"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.13.0",
    "datasets>=4.8.4",
    "deepspeed>=0.18.9",
    "diffusers>=0.37.1",
    "dotenv>=0.9.9",
    "hydra-core>=1.3.2",
    "jupyterlab>=4.5.6",
    "lightning>=2.6.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "omegaconf>=2.3.0",
    "pandas>=3.0.2",
    "rich>=14.3.3",
    "scikit-learn>=1.8.0",
    "tensorboard>=2.20.0",
    "timm>=1.0.26",
    "tokenizers>=0.22.2",
    "torch==2.10.0",
    "torchaudio==2.10.0",
    "torchmetrics>=1.9.0",
    "torchvision==0.25.0",
    "transformers>=5.6.1",
    "typer>=0.24.1",
    "wandb>=0.25.0",
]

[project.scripts]
crucible = "crucible.interface.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.3.0",
]

[tool.uv]
package = true

[tool.setuptools.packages.find]
include = ["crucible*", "core*", "interface*", "plugins*", "runs*"]

[tool.setuptools.package-data]
"interface.cli" = ["templates/*.tpl"]
